--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,11 +10,11 @@
 <header>
     <nav>
         <ul>
-            <li><a th:href="@{/budget}">Budgets</a></li>
-            <li><a th:href="@{/trip}">Trips</a></li>
-            <li><a th:href="@{/expense}">Expenses</a></li>
-            <li><a th:href="@{/destination}">Destinations</a></li>
-            <li><a th:href="@{/user}">Users</a></li>
+            <li><a th:href="@{/budgets}">Budgets</a></li>
+            <li><a th:href="@{/trips}">Trips</a></li>
+            <li><a th:href="@{/expenses}">Expenses</a></li>
+            <li><a th:href="@{/destinations}">Destinations</a></li>
+            <li><a th:href="@{/users}">Users</a></li>
         </ul>
     </nav>
 </header>
