--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h2>Users</h2>
-<a th:href="@{/users/new}">Add User</a>
+<a th:href="@{/users/new}" class="btn">Add User</a>
 <table>
     <thead>
     <tr><th>ID</th><th>Name</th><th>Email</th><th>Actions</th></tr>
@@ -18,8 +18,8 @@
         <td th:text="${user.name}"></td>
         <td th:text="${user.email}"></td>
         <td>
-            <a th:href="@{/users/edit/{id}(id=${user.userId})}">Edit</a> |
-            <a th:href="@{/users/delete/{id}(id=${user.userId})}">Delete</a>
+            <a th:href="@{/users/edit/{id}(id=${user.userId})}" class="btn">✏️ Edit</a> |
+            <a th:href="@{/users/delete/{id}(id=${user.userId})}" class="btn" style="background-color: #e74c3c;">🗑️ Delete</a>
         </td>
     </tr>
     </tbody>
