--- a/src/main/resources/templates/expense/list.html
+++ b/src/main/resources/templates/expense/list.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h2>Expenses</h2>
-<a th:href="@{/expenses/new}">Add Expense</a>
+<a th:href="@{/expenses/new}" class="btn">Add Expense</a>
 <table>
     <thead>
     <tr>
@@ -30,8 +30,8 @@
 <!--        <td th:text="${expense.userName}"></td>-->
         <td th:text="${expense.userId}"></td>
         <td>
-            <a th:href="@{/expenses/edit/{id}(id=${expense.id})}">Edit</a> |
-            <a th:href="@{/expenses/delete/{id}(id=${expense.id})}">Delete</a>
+            <a th:href="@{/expenses/edit/{id}(id=${expense.id})}" class="btn">✏️ Edit</a> |
+            <a th:href="@{/expenses/delete/{id}(id=${expense.id})}" class="btn" style="background-color: #e74c3c;">🗑️ Delete</a>
         </td>
     </tr>
     </tbody>
