--- a/src/main/resources/templates/budget/list.html
+++ b/src/main/resources/templates/budget/list.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
 <body>
-<h2>Budgets</h2>
+<h2>💰 Budgets</h2>
 
 <!-- Styled Add Button -->
 <a th:href="@{/budgets/new}" class="btn">➕ Add Budget</a>
@@ -33,5 +33,10 @@
     </tr>
     </tbody>
 </table>
+
+<div class="nav-buttons">
+    <a th:href="@{/}" class="home-btn">🏠 Homepage</a>
+</div>
+
 </body>
 </html>
