--- a/src/main/resources/templates/expense/form.html
+++ b/src/main/resources/templates/expense/form.html
@@ -34,6 +34,10 @@
     <button type="submit">Save</button>
 </form>
 
-<a th:href="@{/expenses}">Back to Expenses</a>
+<div class="nav-buttons">
+    <a th:href="@{/expenses}" class="back-btn">← Back to Expenses</a>
+    <a th:href="@{/}" class="home-btn">🏠 Homepage</a>
+</div>
+
 </body>
 </html>
