--- a/src/main/resources/templates/trip/form.html
+++ b/src/main/resources/templates/trip/form.html
@@ -30,6 +30,10 @@
     <button type="submit">Save</button>
 </form>
 
-<a th:href="@{/trips}">Back to Trips</a>
+<div class="nav-buttons">
+    <a th:href="@{/trips}" class="back-btn">← Back to Trips</a>
+    <a th:href="@{/}" class="home-btn">🏠 Homepage</a>
+</div>
+
 </body>
 </html>
