--- a/src/main/resources/templates/trip/list.html
+++ b/src/main/resources/templates/trip/list.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
 <body>
-<h2>Trips</h2>
+<h2>🧳 Trips</h2>
 
-<a th:href="@{/trips/new}" class="btn">Add Trip</a>
+<a th:href="@{/trips/new}" class="btn">➕ Add Trip</a>
 
 <table>
     <thead>
@@ -35,5 +35,10 @@
     </tr>
     </tbody>
 </table>
+
+<div class="nav-buttons">
+    <a th:href="@{/}" class="home-btn">🏠 Homepage</a>
+</div>
+
 </body>
 </html>
