--- a/src/main/resources/templates/destination/form.html
+++ b/src/main/resources/templates/destination/form.html
@@ -36,6 +36,10 @@
     <button type="submit">Save</button>
 </form>
 
-<a th:href="@{/destinations}">Back to Destination List</a>
+<div class="nav-buttons">
+    <a th:href="@{/destinations}" class="back-btn">← Back to Destinations</a>
+    <a th:href="@{/}" class="home-btn">🏠 Homepage</a>
+</div>
+
 </body>
 </html>
