--- a/src/main/resources/templates/expense/list.html
+++ b/src/main/resources/templates/expense/list.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
 <body>
-<h2>Expenses</h2>
-<a th:href="@{/expenses/new}" class="btn">Add Expense</a>
+<h2>💸 Expenses</h2>
+<a th:href="@{/expenses/new}" class="btn">➕ Add Expense</a>
 <table>
     <thead>
     <tr>
@@ -36,5 +36,10 @@
     </tr>
     </tbody>
 </table>
+
+<div class="nav-buttons">
+    <a th:href="@{/}" class="home-btn">🏠 Homepage</a>
+</div>
+
 </body>
 </html>
