--- a/src/main/resources/templates/budget/list.html
+++ b/src/main/resources/templates/budget/list.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
 <body>
-<h2>💰 Budgets</h2>
+<h2>💰 BUDGETS</h2>
 
 <!-- Styled Add Button -->
 <a th:href="@{/budgets/new}" class="btn">➕ Add Budget</a>
