--- a/src/main/resources/templates/destination/list.html
+++ b/src/main/resources/templates/destination/list.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
 <body>
-<h2>📍 Destinations</h2>
+<h2>📍 DESTINATIONS</h2>
 <a th:href="@{/destinations/new}" class="btn">➕ Add Destination</a>
 <table>
     <thead>
