--- a/src/main/resources/templates/expense/list.html
+++ b/src/main/resources/templates/expense/list.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
 <body>
-<h2>💸 Expenses</h2>
+<h2>💸 EXPENSES</h2>
 <a th:href="@{/expenses/new}" class="btn">➕ Add Expense</a>
 <table>
     <thead>
