--- a/src/main/resources/templates/trip/list.html
+++ b/src/main/resources/templates/trip/list.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
 <body>
-<h2>🧳 Trips</h2>
+<h2>🧳 TRIPS</h2>
 
 <a th:href="@{/trips/new}" class="btn">➕ Add Trip</a>
 
