--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
 <body>
-<h2>👤 Users</h2>
+<h2>👤 USERS</h2>
 <a th:href="@{/users/new}" class="btn">➕ Add User</a>
 <table>
     <thead>
